# crewstudio2

./: save main
crew_automation_for_erp_research_and_outreach/: .env  Dockerfile  Email_Sage_X3_Ardagh.md  Email_to_Kerry_Flavours.txt  GRIESSER_FRANCE_SA_Sage_X3_Benefit_Report.md  Kerry_Flavours_Email.txt  Kerry_Flavours_France_Report.md  Kerry_Flavours_Overview_Report.md  Kerry_Flavours_Report.md  Kerry_Flavours_Sage_X3_Benefit_Ideas.md  Kerry_Flavours_Sage_X3_Benefits.md  LES_CRUDETTES_Report.md  RAGNI_Report.md  RAGNI_Sage_X3_Benefits_Report.md  README.md  RICHEL_GROUP_Report.md  Report_TechnoPlus_Industries_Sage_X3_Benefits.md  Richel_Group_Sage_X3_Benefits.md  SOC_MATEST_Sage_X3_Benefits.md  SageX3_RAGNI_Email.txt  Sage_X3_Benefit_Ideas_FOR_LES_CRUDETTES.md  Sage_X3_Benefit_Ideas_for_Kerry_Flavours.md  Sage_X3_Benefits_for_Ardagh_Metal_Packaging.md  Technoplus_Industries_Report.md  app.py  benefits_Sage_X3_for_STM.md  benefits_sage_x3_atem.md  benefits_soc_matest.md  benefits_société_d_activite_métallière.md  crew.py  email_demande_reunion.md  email_griesser_france_sa.md  email_richel_group.md  email_sage_x3_atem.md  email_soc_matest.md  email_stm_peinture_industrielle.md  email_techno_plus_industries.md  email_to_LES_CRUDETTES.md  email_to_RAGNI.md  email_to_edmond_scanlon.txt  (+12 more)
crew_automation_for_erp_research_and_outreach/None/: COMASUD_Report.md
crew_automation_for_erp_research_and_outreach/knowledge/: user_preference.txt
crew_automation_for_erp_research_and_outreach/other outputs/: CAPSUM_SageX3_Email.txt  COMASUD_Report.md  COMASUD_Sage_X3_Benefits.md  (+19 more)
(+116 files in other folders)
