[project]
name = "crew_automation_for_erp_research_and_outreach"
version = "0.1.0"
description = "crew_automation_for_erp_research_and_outreach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "serpapi>=0.1.5",
]

[project.scripts]
crew_automation_for_erp_research_and_outreach = "crew_automation_for_erp_research_and_outreach.main:run"
run_crew = "crew_automation_for_erp_research_and_outreach.main:run"
train = "crew_automation_for_erp_research_and_outreach.main:train"
replay = "crew_automation_for_erp_research_and_outreach.main:replay"
test = "crew_automation_for_erp_research_and_outreach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
